[gd_scene load_steps=2 format=3 uid="uid://bsgjp0k27pynl"]

[ext_resource type="Script" path="res://scenes/ui/scripts/room_info.gd" id="1_sknpl"]

[node name="RoomInfo" type="CanvasLayer"]
script = ExtResource("1_sknpl")
room_name = "Room Name"

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 1, 0.827451, 0.627451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_right = 40.0
offset_bottom = 40.0

[node name="RoomName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Name
"
horizontal_alignment = 1

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Save"

[node name="HideButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Hide"

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Delete
"

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
